--- a/lab.html
+++ b/lab.html
@@ -4,5 +4,28 @@
     <p>Pikach <strong> pokemon</strong> <br>nooooooo!</p>
     <img src="minecraft.jpg">
     <img src="https://ichef.bbci.co.uk/images/ic/624x351/p049tgdb.jpg">
-    <a href="https://www.youtube.com/watch?v=L56q_k2ydrs"lets go pikach></a>
+    <a href="https://www.youtube.com/watch?v=L56q_k2ydrs">lets go pikach</a>
+    <p>top 5 pokemon</p>
+    <ol>
+    <li>Dragonit</li>
+    <li>pikachu</li>
+    <li>Mew</li>
+    <li>Mewtwo</li>
+    <li>Charizarid</li>
+    </ol>
+    <table>
+        <tr>
+            <td>name</td>
+            <td>type</td>
+            <td>shiny?</td>
+        </tr>
+            
+        <tr>
+            <td>Dragnit</td>
+            <td>Dragon</td>
+            <td>no</td>
+        </tr>
+        
+    </table>
+    <p></p>
 </html>
