--- a/sprint2labe.html
+++ b/sprint2labe.html
@@ -26,7 +26,7 @@
        <h1>Information</h1>
     <p>you need food for<span style="color:red"> dogs </span></p>
        <P>you need a bole for food</P>
-       <p>you n</p>
+       <p>you nead to walk your dog</p>
     </section> 
 </body> 
 </html>
