--- a/video.html
+++ b/video.html
@@ -8,7 +8,14 @@
         }
         h1, p{
             text-align: center;
-        }   
+        } 
+        #images{
+            
+        }
+        img{
+            width: 800px;
+            height: 500px;
+        }
     </style>
     <title>Jimmy KidGamer</title>
     </head>
@@ -19,5 +26,9 @@
         <iframe width="726" height="408" src="https://www.youtube.com/embed/9LkpuyBX0eg?ecver=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         <br><br><br>
         <iframe width="726" height="408" src="https://www.youtube.com/embed/cBDZUv76-O8?ecver=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <section id="images">
+            <img src="https://image.winudf.com/v2/image/Y29tLnByZXN0b25wbGF5ei5taW5lY3JhZl9zY3JlZW5fMV92OThoZzd3ag/screen-1.jpg?h=800&fakeurl=1&type=.jpg">
+            <img src="https://cdn.shopify.com/s/files/1/2724/8032/products/Prestonplayz_20Flame_20Youtuber_20Gamer_20Logo_20Wwn_030418_nor_b2a4b62b-30ba-4a18-964c-4e4634252205_1024x1024@2x.jpg?v=1526164314">
+        </section>
     </body>
 </html>
